frontend/components/Container/Container.module.scss
.Container {
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  appearance: none;
  outline: none;
  margin-top: 1vh;
  margin-bottom: 1vh;
  margin-left: 0.5vw;
  margin-right: 0.5vw;
  border-radius: 8px;
  transition: background-color 350ms ease;
  background-color: rgba(246, 246, 246, 1);
  border: 1px solid rgba(0, 0, 0, 0.05);
  font-size: 1em;
  width: 24vw;
  overflow: hidden;

  ul {
    display: grid;
    gap: 0.5vw;
    grid-template-columns: repeat(var(--columns, 1), 1fr);
    align-content: space-between; /* Starts aligning the content from the beginning of the container */
    list-style: none;
    padding-top: 7px;
    padding-bottom: 5px;
    padding-left: 6px;
    padding-right: 5px;
    max-width: 100%;
    overflow-x: auto;
  }

  &.scrollable {
    ul {
      overflow-y: auto; /* Adds vertical scrollbar to ul */
    }
  }

  &.placeholder {
    justify-content: center;
    align-items: center;
    cursor: pointer;
    color: rgba(0, 0, 0, 0.5);
    background-color: transparent;
    border-style: dashed;
    border-color: rgba(0, 0, 0, 0.08);

    &:hover {
      border-color: rgba(0, 0, 0, 0.15);
    }
  }

  &.hover {
    background-color: rgb(235, 235, 235, 1);
  }

  &.unstyled {
    overflow: visible;
    background-color: transparent !important;
    border: none !important;
  }

  &.horizontal {
    width: 100%;

    ul {
      grid-auto-flow: column;
    }
  }

  &.shadow {
    box-shadow: 0 1px 2px 0 rgba(60,64,67,0.3), 0 1px 3px 1px rgba(60,64,67,0.15);
  }

  &:focus-visible {
    border-color: transparent;
    box-shadow: 0 0 0 2px rgba(255, 255, 255, 0), 0 0px 0px 2px #4c9ffe;
  }
}

.Header {
  display: flex;
  padding: 5px 20px;
  padding-right: 8px;
  align-items: center;
  justify-content: space-between;
  background-color: #fff;
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
  border-bottom: 1px solid rgba(0, 0, 0, 0.05);

  &:hover {
    .Actions > * {
      opacity: 1 !important;
    }
  }
}

.Actions {
  display: flex;

  > *:first-child:not(:last-child) {
    opacity: 0;

    &:focus-visible {
      opacity: 1;
    }
  }
}

